--- a/about.html
+++ b/about.html
@@ -134,7 +134,7 @@ https://templatemo.com/tm-559-zay-shop
                         situation (even in a pandemic)!
                     </p>
                     <p>
-                        1$ from every purchase will be put towards climate change initiatives to ensure coffee sticks around forever and always!
+                        $1 from every purchase will be put towards climate change initiatives to ensure coffee sticks around forever and always!
                     </p>
                 </div>
                 <div class="col-md-4">
