--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ https://templatemo.com/tm-559-zay-shop
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left">
-                                <h1 class="h1">Philosafy Coffee</h1>
+                                <h1 class="h1">Philo Coffee</h1>
                                 <h3 class="h2">Spring into Spring!</h3>
                                 <p>
                                     Spring into spring with our new selection of brews that have arrived just in time for spring!
